# game-tools

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  game_window.cpp  game_window.h  log.h  stl.hpp
lib/glad/: glad.c  glad.h
lib/graphics/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  sprite_batch.cpp  sprite_batch.h  texture.cpp  texture.h
lib/math/: math.hpp  matrix.hpp  vector.hpp
test/: CMakeLists.txt  bubbles.cpp  car.cpp  main.cpp
